About page image paths, homepage image paths, prototype logo animation for homepage

--- a/src/about.html
+++ b/src/about.html
@@ -22,7 +22,9 @@ title: About
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="bg-image aspect-4x3" style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"></div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"></div>
+        </div>
       </div>
     </div>
     <div class="row">
