--- a/src/focus.html
+++ b/src/focus.html
@@ -46,7 +46,7 @@ title: Focus
             class="btn btn-inline text-primary"
             href="{{ focus.url }}"
             title="{{ focus.title }}"
-            data-transition="SecondTransition"
+            data-transition="FocusTransition"
             >Learn more...</a
           >
         </div>
