--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: Home
 ---
-{% include transition.html %}
 
+<!-- {% include transition.html %} -->
 
 <section>
   <div class="container">
@@ -11,15 +11,29 @@ title: Home
       <div class="col-12">
         <div class="content editable">
           <p class="quote">"I have never felt more alive!"</p>
-          <p class="quote-author"><strong>Bert Appward</strong><br>Fortune 100 Company</p>
+          <p class="quote-author">
+            <strong>Bert Appward</strong><br />Fortune 100 Company
+          </p>
         </div>
       </div>
     </div>
     <div id="home-copy" class="row">
       <div class="col-12">
         <div class="content editable">
-          <p>Yeah. No. That’s complete bullshit. Though we have tons of testimonials exalting the breadth of our awesomeness (from Jeff’s beard to Michael’s hair to Abby’s quality nicknames to even our work itself), this quote is made up, but it’s what we expect every client to say after working with Ocupop.</p>
-          <p>The power of design thinking paired with unparalleled enthusiasm and empathy makes for a creative experience like no other. Equal parts energizing and enlightening, our client relationships are tight. We dig deep, debate, and deliver together—laughing, crying and fighting like hell to change lives... or at very least blow minds.</p>
+          <p>
+            Yeah. No. That’s complete bullshit. Though we have tons of
+            testimonials exalting the breadth of our awesomeness (from Jeff’s
+            beard to Michael’s hair to Abby’s quality nicknames to even our work
+            itself), this quote is made up, but it’s what we expect every client
+            to say after working with Ocupop.
+          </p>
+          <p>
+            The power of design thinking paired with unparalleled enthusiasm and
+            empathy makes for a creative experience like no other. Equal parts
+            energizing and enlightening, our client relationships are tight. We
+            dig deep, debate, and deliver together—laughing, crying and fighting
+            like hell to change lives... or at very least blow minds.
+          </p>
         </div>
       </div>
     </div>
@@ -29,21 +43,36 @@ title: Home
         <div class="content">
           <div class="row">
             <div class="col-md-8">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/home/ocupop-workgrid-01.jpg)"></div>
+              <div
+                class="bg-image aspect-1x1 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/ocupop-workgrid-01.jpg)"
+              ></div>
             </div>
             <div class="col-md-4">
               <div class="d-flex h-100 flex-column justify-content-between">
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/home/ocupop-workgrid-02.jpg)"></div>
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/home/ocupop-workgrid-03.jpg)"></div>
+                <div
+                  class="bg-image aspect-1x1 mt-md-0 mt-5"
+                  style="background-image: url(/assets/img/home/ocupop-workgrid-02.jpg)"
+                ></div>
+                <div
+                  class="bg-image aspect-1x1 mt-md-0 mt-5"
+                  style="background-image: url(/assets/img/home/ocupop-workgrid-03.jpg)"
+                ></div>
               </div>
             </div>
           </div>
           <div class="row mt-4">
             <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/home/ocupop-workgrid-04.jpg)"></div>
+              <div
+                class="bg-image aspect-4x3 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/ocupop-workgrid-04.jpg)"
+              ></div>
             </div>
             <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/home/ocupop-workgrid-05.jpg)"></div>
+              <div
+                class="bg-image aspect-4x3 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/ocupop-workgrid-05.jpg)"
+              ></div>
             </div>
           </div>
         </div>
@@ -52,20 +81,29 @@ title: Home
   </div>
 </section>
 
-
-
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6">
         <div class="content editable">
-          <p class="quote">“Not necessarily what I wanted, but exactly what I needed.”</p>
-          <p class="quote-author"><strong>Jesse Fink</strong><br>Founder, Refed and Priceline.com</p>
+          <p class="quote">
+            “Not necessarily what I wanted, but exactly what I needed.”
+          </p>
+          <p class="quote-author">
+            <strong>Jesse Fink</strong><br />Founder, Refed and Priceline.com
+          </p>
         </div>
       </div>
       <div class="col-md-6">
         <div class="content editable">
-          <p>As experts, we’re hired to deliver solutions not options. We’ve honed an uncanny ability to be direct yet diplomatic, concise yet collaborative— tackling tough conversations and even tougher design problems together. We avoid the ‘consultant-cop-out’ of forcing clients to choose between multiple partially thought out options and instead work collaboratively toward one reasoned, powerful solution.</p>
+          <p>
+            As experts, we’re hired to deliver solutions not options. We’ve
+            honed an uncanny ability to be direct yet diplomatic, concise yet
+            collaborative— tackling tough conversations and even tougher design
+            problems together. We avoid the ‘consultant-cop-out’ of forcing
+            clients to choose between multiple partially thought out options and
+            instead work collaboratively toward one reasoned, powerful solution.
+          </p>
         </div>
       </div>
     </div>
@@ -83,17 +121,29 @@ title: Home
   </div>
 </section>
 
-
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="content editable">
-          <p class="quote">..we do good work for good people and they make referrals. For 20 years!”</p>
-          <p class="quote-author"><strong>Michael Nieling</strong><br>Founder and Creative Director</p>
+          <p class="quote">
+            ..we do good work for good people and they make referrals. For 20
+            years!”
+          </p>
+          <p class="quote-author">
+            <strong>Michael Nieling</strong><br />Founder and Creative Director
+          </p>
         </div>
         <div class="content editable">
-          <p>No cheesy sale-sters in EXPRESS shiny shirts, no account planners, no middle men, and none of the overhead that goes along with ‘em! We interface directly with decision makers and fanatically pursue perfection in planning, execution, and implementation. Projects are completed quickly and e ciently, and with refreshing candor and commitment...always aspiring to the ideal that we work WITH you, not for you.</p>
+          <p>
+            No cheesy sale-sters in EXPRESS shiny shirts, no account planners,
+            no middle men, and none of the overhead that goes along with ‘em! We
+            interface directly with decision makers and fanatically pursue
+            perfection in planning, execution, and implementation. Projects are
+            completed quickly and e ciently, and with refreshing candor and
+            commitment...always aspiring to the ideal that we work WITH you, not
+            for you.
+          </p>
           <a href="#" class="btn btn-inline">Learn More...</a>
         </div>
       </div>
@@ -105,13 +155,27 @@ title: Home
     <div class="row align-items-center">
       <div class="col-md-6">
         <div class="content editable">
-          <p class="quote">“If you guys are such hot shit, who have you worked with? Anything I have ever seen?”</p>
-          <p class="quote-author"><strong>You (being a little grumpy, honestly)</strong><br>Potential Ocupop Client</p>
+          <p class="quote">
+            “If you guys are such hot shit, who have you worked with? Anything I
+            have ever seen?”
+          </p>
+          <p class="quote-author">
+            <strong>You (being a little grumpy, honestly)</strong
+            ><br />Potential Ocupop Client
+          </p>
         </div>
       </div>
       <div class="col-md-6">
         <div class="content editable">
-          <p>Ocupop has helped to define the visual language of the web and beyond since 2000, we’ve led design projects for companies at all ends of the spectrum—from Google, Facebook, and Mozilla to PBS, SXSW, and Burton Snowboards to countless successful (and horribly failed) startups, our small, super-powered team has created some of the most influential logos, icons, campaigns and user interfaces on the web and beyond.</p>
+          <p>
+            Ocupop has helped to define the visual language of the web and
+            beyond since 2000, we’ve led design projects for companies at all
+            ends of the spectrum—from Google, Facebook, and Mozilla to PBS,
+            SXSW, and Burton Snowboards to countless successful (and horribly
+            failed) startups, our small, super-powered team has created some of
+            the most influential logos, icons, campaigns and user interfaces on
+            the web and beyond.
+          </p>
           <a href="#" class="btn btn-inline">Learn More</a>
         </div>
       </div>
@@ -120,18 +184,58 @@ title: Home
       <div class="col-12">
         <div class="content">
           <div class="logo-pile">
-            <img src="/assets/img/home/logopile-google.png" alt="Google Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-w3c.png" alt="W3C Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-harvardbusinessreview.png" alt="Harvard Business Review Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-sxsw.png" alt="South by SouthWest Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-facebook.png" alt="Facebook Logo" class="img-fluid">
+            <img
+              src="/assets/img/home/logopile-google.png"
+              alt="Google Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-w3c.png"
+              alt="W3C Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-harvardbusinessreview.png"
+              alt="Harvard Business Review Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-sxsw.png"
+              alt="South by SouthWest Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-facebook.png"
+              alt="Facebook Logo"
+              class="img-fluid"
+            />
           </div>
           <div class="logo-pile">
-            <img src="/assets/img/home/logopile-frontline.png" alt="Frontline Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-pbs.png" alt="PBS Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-burton.png" alt="Burton Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-mozilla.png" alt="Mozilla Logo" class="img-fluid">
-            <img src="/assets/img/home/logopile-internetsociety.png" alt="Internet Society Logo" class="img-fluid">
+            <img
+              src="/assets/img/home/logopile-frontline.png"
+              alt="Frontline Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-pbs.png"
+              alt="PBS Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-burton.png"
+              alt="Burton Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-mozilla.png"
+              alt="Mozilla Logo"
+              class="img-fluid"
+            />
+            <img
+              src="/assets/img/home/logopile-internetsociety.png"
+              alt="Internet Society Logo"
+              class="img-fluid"
+            />
           </div>
         </div>
       </div>
@@ -144,8 +248,17 @@ title: Home
       <div class="col">
         <div class="content editable">
           <p class="quote">“We are DEZIGNING! Ocupop rulez SUPREME!”</p>
-          <p class="quote-author"><strong>Jon Burr</strong><br>Ocupop Web Developer, Canadian</p>
-          <p>Infamous international Vision Quests, dance parties, and spirited creative debate, Tom Collinses, skateboard ramps, and world class design. Working at Ocupop is designed to be the best job you’ve ever had—and we are always looking for the right people to add to The World’s Greatest DesignsquadTM, so drop a joke in the joke station and let’s see if you’ve got what it takes!</p>
+          <p class="quote-author">
+            <strong>Jon Burr</strong><br />Ocupop Web Developer, Canadian
+          </p>
+          <p>
+            Infamous international Vision Quests, dance parties, and spirited
+            creative debate, Tom Collinses, skateboard ramps, and world class
+            design. Working at Ocupop is designed to be the best job you’ve ever
+            had—and we are always looking for the right people to add to The
+            World’s Greatest DesignsquadTM, so drop a joke in the joke station
+            and let’s see if you’ve got what it takes!
+          </p>
           <a href="#" class="btn btn-inline">Learn More</a>
         </div>
       </div>
@@ -155,21 +268,36 @@ title: Home
         <div class="content">
           <div class="row">
             <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/home/homepage-culture-01.jpg)"></div>
+              <div
+                class="bg-image aspect-4x3 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/homepage-culture-01.jpg)"
+              ></div>
             </div>
             <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/home/homepage-culture-02.jpg)"></div>
+              <div
+                class="bg-image aspect-4x3 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/homepage-culture-02.jpg)"
+              ></div>
             </div>
           </div>
-          <div class="row mt-5">  
+          <div class="row mt-5">
             <div class="col-md-4">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/home/homepage-culture-03.jpg)"></div>
+              <div
+                class="bg-image aspect-1x1 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/homepage-culture-03.jpg)"
+              ></div>
             </div>
             <div class="col-md-4">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/home/homepage-culture-04.jpg)"></div>
+              <div
+                class="bg-image aspect-1x1 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/homepage-culture-04.jpg)"
+              ></div>
             </div>
             <div class="col-md-4">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/home/homepage-culture-05.jpg)"></div>
+              <div
+                class="bg-image aspect-1x1 mt-md-0 mt-5"
+                style="background-image: url(/assets/img/home/homepage-culture-05.jpg)"
+              ></div>
             </div>
           </div>
         </div>
