--- a/src/contact.html
+++ b/src/contact.html
@@ -42,8 +42,14 @@ title: Contact
           <h1>Send us a Heyder</h1>
           <p>Ocupop is perpetually pushing the limits of technology, testing and tweaking at the leading edge of what’s possible in a browser. This Joke Station 3000 Webform® feeds an artifically intelligent system painstakingly adapted over time to identify only the most hillarious funnies. See if you can make our robot laugh— he love puns.</p>
         </div>
-      <div class="col-12">
-        <div class="content">    
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
           <div class="cognito">
             <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
             <script>Cognito.load("forms", { id: "25" });</script>
