--- a/src/focus.html
+++ b/src/focus.html
@@ -3,7 +3,7 @@ layout: default
 title: Focus
 ---
 
-<section class="bg-light">
+<section id="page-intro" class="bg-light">
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-8">
