--- a/src/work.html
+++ b/src/work.html
@@ -7,7 +7,7 @@ testimonial:
   author: Alyssa Fox
   title: Founder, Fox Tax Service
 ---
-<section class="bg-light">
+<section id="page-intro" class="bg-light">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
