--- a/src/contact.html
+++ b/src/contact.html
@@ -2,7 +2,7 @@
 layout: default
 title: Contact
 ---
-<section>
+<section id="page-intro">
   <div class="container">
     <div class="row">
       <div class="col-12">
