--- a/src/index.html
+++ b/src/index.html
@@ -43,17 +43,24 @@ title: Home
         <div class="content">
           <div class="row">
             <div class="col-md-8">
-              <div
-                class="bg-image aspect-1x1 mt-md-0 mt-5"
+              <a
+                class="bg-image aspect-1x1 mt-md-0 mt-5 expand-full-screen"
                 style="background-image: url(/assets/img/home/ocupop-workgrid-01.jpg)"
-              ></div>
+                data-image="/assets/img/home/ocupop-workgrid-01.jpg"
+                data-transition="ProjectTransition"
+                href="/work/google-developer-days/"
+              ></a>
             </div>
             <div class="col-md-4">
               <div class="d-flex h-100 flex-column justify-content-between">
-                <div
-                  class="bg-image aspect-1x1 mt-md-0 mt-5"
+                <a
+                  class="bg-image aspect-1x1 mt-md-0 mt-5 expand-full-screen"
                   style="background-image: url(/assets/img/home/ocupop-workgrid-02.jpg)"
-                ></div>
+                  data-image="/assets/img/home/ocupop-workgrid-02.jpg"
+                  data-transition="ProjectTransition"
+                  href="/work/first-launch/"
+                  >
+                </div>
                 <div
                   class="bg-image aspect-1x1 mt-md-0 mt-5"
                   style="background-image: url(/assets/img/home/ocupop-workgrid-03.jpg)"
