project transition prototypes

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <!-- {% include transition.html %} -->
 
-<section>
+<section id="page-intro">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -37,49 +37,75 @@ title: Home
         </div>
       </div>
     </div>
-
+  </div>
+</section>
+<section class="pt-0">
+  <div class="container">
     <div id="photo-grid" class="row">
       <div class="col">
         <div class="content">
           <div class="row">
             <div class="col-md-8">
               <a
-                class="bg-image aspect-1x1 mt-md-0 mt-5 expand-full-screen"
-                style="background-image: url(/assets/img/home/ocupop-workgrid-01.jpg)"
+                class="expand-full-screen"
                 data-image="/assets/img/home/ocupop-workgrid-01.jpg"
                 data-transition="ProjectTransition"
-                href="/work/google-developer-days/"
-              ></a>
+                href="/work/google-developer-days/">
+                <div 
+                  class="bg-image aspect-1x1 mt-md-0 mt-5"
+                  style="background-image: url(/assets/img/home/ocupop-workgrid-01.jpg)">
+                </div>
+              </a>
             </div>
             <div class="col-md-4">
               <div class="d-flex h-100 flex-column justify-content-between">
-                <a
-                  class="bg-image aspect-1x1 mt-md-0 mt-5 expand-full-screen"
-                  style="background-image: url(/assets/img/home/ocupop-workgrid-02.jpg)"
+                  <a
+                  class="expand-full-screen"
                   data-image="/assets/img/home/ocupop-workgrid-02.jpg"
                   data-transition="ProjectTransition"
-                  href="/work/first-launch/"
-                  >
+                  href="/work/first-launch/">
+                    <div
+                      class="bg-image aspect-1x1 mt-md-0 mt-5"
+                      style="background-image: url(/assets/img/home/ocupop-workgrid-02.jpg)">
+                    </div>
                   </a>
-                <div
-                  class="bg-image aspect-1x1 mt-md-0 mt-5"
-                  style="background-image: url(/assets/img/home/ocupop-workgrid-03.jpg)"
-                ></div>
+                  <a
+                    class="expand-full-screen"
+                    data-image="/assets/img/home/ocupop-workgrid-03.jpg"
+                    data-transition="ProjectTransition"
+                    href="/work/burton-learn-to-ride/">
+                    <div 
+                     class="bg-image aspect-1x1 mt-md-0 mt-5"
+                     style="background-image: url(/assets/img/home/ocupop-workgrid-03.jpg)">
+                    </div>
+                  </a>
               </div>
             </div>
           </div>
           <div class="row mt-4">
             <div class="col-md-6">
-              <div
-                class="bg-image aspect-4x3 mt-md-0 mt-5"
-                style="background-image: url(/assets/img/home/ocupop-workgrid-04.jpg)"
-              ></div>
+              <a
+                class="expand-full-screen"
+                data-image="/assets/img/home/ocupop-workgrid-04.jpg"
+                data-transition="ProjectTransition"
+                href="/work/mapbox-locate/">
+                <div
+                  class="bg-image aspect-4x3 mt-md-0 mt-5"
+                  style="background-image: url(/assets/img/home/ocupop-workgrid-04.jpg)">
+                </div>
+              </a>
             </div>
             <div class="col-md-6">
-              <div
-                class="bg-image aspect-4x3 mt-md-0 mt-5"
-                style="background-image: url(/assets/img/home/ocupop-workgrid-05.jpg)"
-              ></div>
+              <a 
+                class="expand-full-screen"
+                data-image="/assets/img/home/ocupop-workgrid-05.jpg" 
+                data-transition="ProjectTransition" 
+                href="/work/bittercube/">
+                <div
+                  class="bg-image aspect-4x3 mt-md-0 mt-5"
+                  style="background-image: url(/assets/img/home/ocupop-workgrid-05.jpg)">
+                </div>
+              </a>
             </div>
           </div>
         </div>
