code cleanup, responsive styles

--- a/src/about.html
+++ b/src/about.html
@@ -32,10 +32,7 @@ title: About
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div
-            class="bg-image aspect-4x3"
-            style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"
-          ></div>
+          <div class="bg-image aspect-4x3" style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"></div>
         </div>
       </div>
     </div>
@@ -52,10 +49,8 @@ title: About
             every decision, and earning and maintaining trust while we blow
             their fucking minds.
           </p>
-          <a href="#"
-            >Listen to Michael's 'How to say Fuck No and still have them love
-            you! SXSW Talk</a
-          >
+          <a href="#">Listen to Michael's 'How to say Fuck No and still have them love
+            you! SXSW Talk</a>
         </div>
       </div>
       <div class="col-md-6">
@@ -70,9 +65,7 @@ title: About
             design some of the most influential logos, campaigns, and user
             interfaces on the web over the last twenty years.
           </p>
-          <a href="#"
-            >Listen to Michael's 'Screw Fuck No, Say Shit Yeah! SXSW Talk</a
-          >
+          <a href="#">Listen to Michael's 'Screw Fuck No, Say Shit Yeah! SXSW Talk</a>
         </div>
       </div>
     </div>
@@ -85,9 +78,7 @@ title: About
       <div class="col-md-6">
         <div class="content editable">
           <div
-            class="bg-image aspect-4x3"
-            style="background-image: url({{ member.image | default: site.placeholders.aspect-4x3 }})"
-          ></div>
+            class="bg-image aspect-4x3" style="background-image: url({{ member.image | default: site.placeholders.aspect-4x3 }})"></div>
           <h3 class="mt-3">{{ member.name }}</h3>
           <h4>{{ member.role }}</h4>
           <dl class="mt-4">
