--- a/src/focus.html
+++ b/src/focus.html
@@ -36,9 +36,7 @@ title: Focus
       "slug", focus.project | first %}
       <div class="col-md-6">
         <div class="content">
-          <div
-            class="bg-image aspect-4x3 bg-none mt-5"
-            style="background-image:url({{ focus.featured_image }})"
+          <div class="bg-image aspect-4x3 bg-none mt-5" style="background-image:url({{ focus.featured_image }})"
           ></div>
           <h3 class="mt-5">{{ focus.title }}</h3>
           <p>{{ focus.label }}</p>
@@ -46,9 +44,7 @@ title: Focus
             class="btn btn-inline text-primary"
             href="{{ focus.url }}"
             title="{{ focus.title }}"
-            data-transition="FocusTransition"
-            >Learn more...</a
-          >
+            data-transition="FocusTransition">Learn more...</a>
         </div>
       </div>
       {% endfor %}
