--- a/src/privacy.html
+++ b/src/privacy.html
@@ -14,7 +14,6 @@ title: Privacy Policy
           tracking visitor activity anonymously; targeting advertisements by
           interest; and remembering user preferences.
         </p>
-
         <p>
           I set a cookie to remember that you don't want to see the banner at
           the top of the page that warns you about cookies on this site. If you
@@ -22,7 +21,6 @@ title: Privacy Policy
           on future visits* and you will opt in to having a cookie placed on
           your machine by me.
         </p>
-
         <p>
           This site makes use of some third party services who also store
           cookies (Third party cookies) on your machine. These services are
@@ -39,12 +37,9 @@ title: Privacy Policy
           please visit www.aboutcookies.org.
         </p>
         <p>
-          <em
-            >*Note: cookies are browser-specific. If you visit using a different
-            browser or on another machine, you may see the banner again.</em
-          >
+          <em>*Note: cookies are browser-specific. If you visit using a different
+            browser or on another machine, you may see the banner again.</em>
         </p>
-
         <h3>Personal Information</h3>
         <p>
           I collect personal information from you when you use either the
